--- a/404.html
+++ b/404.html
@@ -33,8 +33,8 @@
 
   
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Daniel Padfield">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="alternate" href="https://padpadpadpad.github.io/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="feed" href="https://padpadpadpad.github.io/index.xml" type="application/rss+xml" title="Daniel Padfield">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -133,22 +133,22 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="/post/">Posts</a></li>
+    <li><a href="https://padpadpadpad.github.io/post/">Posts</a></li>
   </ul>
   
   <ul>
-    <li><a href="/post/introducing-nlsloop/">Introducing nlsLoop</a></li>
+    <li><a href="https://padpadpadpad.github.io/post/introducing-nlsloop/">Introducing nlsLoop</a></li>
   </ul>
   
 
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="/publication/metabolic_compensation_iceland/">Metabolic compensation constrains the temperature dependence of gross primary production</a></li>
+    <li><a href="https://padpadpadpad.github.io/publication/metabolic_compensation_iceland/">Metabolic compensation constrains the temperature dependence of gross primary production</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/">Publications</a></li>
+    <li><a href="https://padpadpadpad.github.io/publication/">Publications</a></li>
   </ul>
   
 
