--- a/talk/index.html
+++ b/talk/index.html
@@ -28,13 +28,13 @@
 
   
 
-  <link rel="alternate" href="/talk/index.xml" type="application/rss+xml" title="Daniel Padfield">
-  <link rel="feed" href="/talk/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="alternate" href="https://padpadpadpad.github.io/talk/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="feed" href="https://padpadpadpad.github.io/talk/index.xml" type="application/rss+xml" title="Daniel Padfield">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/talk/">
+  <link rel="canonical" href="https://padpadpadpad.github.io/talk/">
 
   
 
@@ -148,7 +148,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/talk/example-talk/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://padpadpadpad.github.io/talk/example-talk/">
   Details
 </a>
 
