Try again  - had not changed draft: no

--- a/404.html
+++ b/404.html
@@ -133,6 +133,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="https://padpadpadpad.github.io/post/using-blast-on-sanger-sequences-in-r/">Doing local BLAST searches on sanger sequence data in R</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://padpadpadpad.github.io/post/">Posts</a></li>
   </ul>
   
