--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
   <div class="article-style" itemprop="articleBody">
     
-    Introduction Moving to a microbiology group has meand I now have loads of interesting genomic and sequencing data to play with!
+    Introduction Moving to a microbiology group has meant I now have loads of interesting genomic and sequencing data to play with!
 One common task we have when we start with some new natural communities is to work out what is in there! We plate the samples out, look at their colony morphology, but colonies can be picked and sequenced using sanger sequencing. Once you have your sequencing data back, you can check your sequence against a database to look at the taxonomic identity of the picked colonies.
     
   </div>
