--- a/404.html
+++ b/404.html
@@ -137,6 +137,10 @@
   </ul>
   
   <ul>
+    <li><a href="https://padpadpadpad.github.io/post/fitting-non-linear-regressions-with-broom-purrr-and-nls.multstart/">Fitting non-linear regressions with broom, purrr and nls.multstart</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://padpadpadpad.github.io/post/">Posts</a></li>
   </ul>
   
