Add bootstrap blogpost

--- a/404.html
+++ b/404.html
@@ -146,6 +146,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="https://padpadpadpad.github.io/post/bootstrapping-non-linear-regressions-with-purrr/">Bootstrap non-linear regression with purrr and modelr</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://padpadpadpad.github.io/post/fitting-non-linear-regressions-with-broom-purrr-and-nls.multstart/">Fitting non-linear regressions with broom, purrr and nls.multstart</a></li>
   </ul>
   
