Update static pages (publications and about me)

--- a/publication/index.html
+++ b/publication/index.html
@@ -41,13 +41,13 @@
     
   
 
-  <link rel="alternate" href="https://padpadpadpad.github.io/publication/index.xml" type="application/rss+xml" title="Daniel Padfield">
-  <link rel="feed" href="https://padpadpadpad.github.io/publication/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="feed" href="/publication/index.xml" type="application/rss+xml" title="Daniel Padfield">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://padpadpadpad.github.io/publication/">
+  <link rel="canonical" href="/publication/">
 
   
 
@@ -166,7 +166,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://padpadpadpad.github.io/publication/metabolic_compensation_iceland/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/metabolic_compensation_iceland/">
   Details
 </a>
 
