--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -46,13 +46,13 @@
     
   
 
-  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="Daniel Padfield">
-  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="alternate" href="https://padpadpadpad.github.io/publication_types/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="feed" href="https://padpadpadpad.github.io/publication_types/index.xml" type="application/rss+xml" title="Daniel Padfield">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/publication_types/">
+  <link rel="canonical" href="https://padpadpadpad.github.io/publication_types/">
 
   
 
@@ -161,6 +161,13 @@
   
 
   
+  
+  <div>
+    <h2><a href="https://padpadpadpad.github.io/publication_types/2/">2</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
   
 
   
