--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ This blog post assumes you have a non-linear model formulation you want to fit t
 <h3 id="2019">2019</h3>
 
 <ul>
-<li><p><strong>Padfield, D.</strong>, Castledine, M., &amp; Buckling, A. (2019) Temperature-dependent changes to host-parasite interactions alter the thermal performance of a bacterial host. <em>ISME</em> <a href="https://www.nature.com/articles/s41396-019-0526-5" target="_blank">doi pending</a></p></li>
+<li><p><strong>Padfield, D.</strong>, Castledine, M., &amp; Buckling, A. (2019) Temperature-dependent changes to host-parasite interactions alter the thermal performance of a bacterial host. <em>ISME</em> <a href="https://www.nature.com/articles/s41396-019-0526-5" target="_blank">doi:10.1038/s41396-019-0526-5</a></p></li>
 
 <li><p>Hesse, E., <strong>Padfield, D.</strong>, Bayer, F., Van Veen, E.M., Bryan, C.G., &amp; Buckling, A. (2019) Anthropogenic remediation of heavy metals selects against natural microbial remediation. <em>Proceedings of the Royal Society</em> 286(1905) <a href="https://royalsocietypublishing.org/doi/10.1098/rspb.2019.0804" target="_blank">doi:10.1098/rspb.2019.0804</a></p></li>
 
