Update aboutme section

--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
 <h1 id="a-little-about-me">A little about me</h1>
 
-<p>I am a ecologist with broad interests that span climate change, evolution, and community ecology. The common thread throughout my research so far has been the impacts of climate change on the biosphere, primarily on phytoplankton and bacteria. During my PhD with Gabriel Yvon-Durocher, I explored how warming will alter rates of photosynthesis and respiration in phytoplankton. To do this, I combined ideas from metabolic theory and experimental approaches from studying Icelandic streams to experimental evolution.</p>
+<p>I am an ecologist with broad interests that span climate change, evolution, and community ecology. The common thread throughout my research so far has been the impacts of climate change on the biosphere, primarily on phytoplankton and bacteria. During my PhD with Gabriel Yvon-Durocher, I explored how warming will alter rates of photosynthesis and respiration in phytoplankton. To do this, I combined ideas from metabolic theory and experimental approaches from studying Icelandic streams to experimental evolution.</p>
 
-<p>I now work primarily on bacteria with Angus Buckling and his talented and lovely lab group. I am investigating how host-parasite interactions will change under warming, using the bacteria, <em>Pseudomonas fluorescens</em> and its lytic phage, $\phi 2$. Other work I have collaborated with in the lab includes the importance of rapid evolution of diversity in impacting community structure and community coalescence, an emerging area of research examining the dynamics of whole microbial communities mixing.</p>
+<p>I now work primarily on bacteria with Angus Buckling and his talented and lovely lab group. I am investigating how temperature affects host-parasite interactions, using the bacteria <em>Pseudomonas fluorescens</em> and its lytic phage $\phi 2$. Other work I have collaborated with in the lab includes the importance of rapid evolution of diversity in impacting community structure, and community coalescence, an emerging area of research examining the dynamics of whole microbial communities mixing.</p>
 
-<p>I an avid R programmer, and have experience in bioinformatics from 16S sequencing to <em>de novo</em> genome assembly. If you have any questions about my code from publications or my R packages please get in touch!</p>
+<p>I am an avid R programmer, and have experience in bioinformatics from 16S sequencing to <em>de novo</em> genome assembly. If you have any questions about my code from publications or my R packages please get in touch!</p>
 
-<p>In life, I live in Cornwall, UK, and have a chronically ill partner, Sophia, who lives with her parents in Cheltenham Spa. I maintain a <a href="https://twitter.com/padpadpadpad/status/1106186559588585472" target="_blank">twitter thread</a> documenting her struggle and our life. We love watching the garden birds together (although she is only well enough to watch from the windown once a day at the moment). We also have a very cute sausage dog called Copper.</p>
+<p>In life, I live in Cornwall, UK, and have a chronically ill partner, Sophia, who lives with her parents in Cheltenham Spa. I maintain a <a href="https://twitter.com/padpadpadpad/status/1106186559588585472" target="_blank">twitter thread</a> documenting her struggle and our life. We love watching the garden birds together (although she is only well enough to watch from the window once a day at the moment). We also have a very cute sausage dog called Copper.</p>
 
 
     <div class="row">
