--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
     
   
 
-  <link rel="alternate" href="https://padpadpadpad.github.io/index.xml" type="application/rss+xml" title="Daniel Padfield">
-  <link rel="feed" href="https://padpadpadpad.github.io/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Daniel Padfield">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Daniel Padfield">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -158,46 +158,50 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/calculating-microbial-growth-rates-from-od-using-rolling-regression/">Calculating microbial growth rates from OD measurements using rolling regression in the tidyverse</a></li>
+    <li><a href="/post/calculating-microbial-growth-rates-from-od-using-rolling-regression/">Calculating microbial growth rates from OD measurements using rolling regression in the tidyverse</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/animate-your-strava-activities-using-rstrava-and-gganimate/">Animate your Strava activities in R using rStrava and gganimate</a></li>
+    <li><a href="/post/animate-your-strava-activities-using-rstrava-and-gganimate/">Animate your Strava activities in R using rStrava and gganimate</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/bootstrapping-non-linear-regressions-with-purrr/">Bootstrap non-linear regression with purrr and modelr</a></li>
+    <li><a href="/post/bootstrapping-non-linear-regressions-with-purrr/">Bootstrap non-linear regression with purrr and modelr</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/fitting-non-linear-regressions-with-broom-purrr-and-nls.multstart/">Fitting non-linear regressions with broom, purrr and nls.multstart</a></li>
+    <li><a href="/post/fitting-non-linear-regressions-with-broom-purrr-and-nls.multstart/">Fitting non-linear regressions with broom, purrr and nls.multstart</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/using-blast-on-sanger-sequences-in-r/">Doing local BLAST searches on sanger sequence data in R</a></li>
+    <li><a href="/post/using-blast-on-sanger-sequences-in-r/">Doing local BLAST searches on sanger sequence data in R</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/">Posts</a></li>
+    <li><a href="/post/">Posts</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/post/introducing-nlsloop/">Introducing nlsLoop</a></li>
+    <li><a href="/post/introducing-nlsloop/">Introducing nlsLoop</a></li>
   </ul>
   
 
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/publication/bacteria_phage_temperature_isme/">Temperature-dependent changes to host–parasite interactions alter the thermal performance of a bacterial host</a></li>
+    <li><a href="/publication/bacteria_phage_temperature_isme/">Temperature-dependent changes to host–parasite interactions alter the thermal performance of a bacterial host</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/publication/metabolic_compensation_iceland/">Metabolic compensation constrains the temperature dependence of gross primary production</a></li>
+    <li><a href="/publication/castledine_et_al_2018_jeb/">A shared coevolutionary history does not alter the outcome of coalescence in experimental populations of Pseudomonas fluorescens</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://padpadpadpad.github.io/publication/">Publications</a></li>
+    <li><a href="/publication/metabolic_compensation_iceland/">Metabolic compensation constrains the temperature dependence of gross primary production</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/">Publications</a></li>
   </ul>
   
 
